# SimulatorAPI

./: README.md  pyproject.toml
src/: main.py
src/api/: router.py
src/core/: config.py
src/models/: battery.py  simulator.py
src/schemas/: simulation.py
